--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_CmbProducto_IngresoInventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_CmbProducto_IngresoInventario.cshtml
@@ -6,24 +6,27 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "IngresoInventario", Action = "CmbProducto_IngresoInventario", Area = "Inventario" };
+        settings.CallbackRouteValues = new { Controller = "EgresoInventario", Action = "CmbProducto_EgresoInventario", Area = "Inventario" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pr_descripcion";
         settings.Properties.TextFormatString = "[{1}] {2}";
         settings.Properties.ValueField = "IdProducto";
         settings.Properties.ValueType = typeof(decimal);
-        settings.Properties.FilterMinLength = 3;
 
         settings.Properties.Columns.Add("IdProducto", "ID", 5);
         settings.Properties.Columns.Add("pr_descripcion", "Producto", 65);
         settings.Properties.Columns.Add("nom_categoria", "Categoria", 15);
         settings.Properties.Columns.Add("nom_presentacion", "Presentación", 15);
+        settings.Properties.FilterMinLength = 3;
 
 
     })
-    .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.IngresoInventarioController().get_list_bajo_demanda,
-    new Core.Erp.Web.Areas.Inventario.Controllers.IngresoInventarioController().get_info_bajo_demanda)
-    .Bind(Model.GetType() == typeof(Core.Erp.Info.Inventario.in_Ing_Egr_Inven_Info) ? "" : (Model.ToString() == "0" ? "" : Model));
+
+     .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.IngresoInventarioController().get_list_bajo_demanda,
+      new Core.Erp.Web.Areas.Inventario.Controllers.IngresoInventarioController().get_info_bajo_demanda).Bind((Model.GetType() == typeof(Core.Erp.Info.Inventario.in_Ing_Egr_Inven_det_Info) || Model.GetType() == typeof(List<Core.Erp.Info.Inventario.in_Ing_Egr_Inven_det_Info>)) ? "" : (Model == 0 ? "" : Model));
+
+
 }
 @comboBox.GetHtml()
+
