--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/_GridViewPartial_liquidacion_oc_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/_GridViewPartial_liquidacion_oc_det.cshtml
@@ -8,8 +8,8 @@
         settings.Width = Unit.Percentage(100);
 
 
-        settings.SettingsContextMenu.Enabled = true;
-        settings.SettingsBehavior.EnableCustomizationWindow = true;
+        //settings.SettingsContextMenu.Enabled = true;
+        //settings.SettingsBehavior.EnableCustomizationWindow = true;
         settings.Settings.ShowFooter = true;
 
         settings.SettingsPager.Visible = true;
