--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/RecepcionOrdenCompra/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/RecepcionOrdenCompra/Anular.cshtml
@@ -89,8 +89,8 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="or_observacion">Observación recepcion de mercaderia</label>
-                    @Html.TextAreaFor(q => q.oe_observacion, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.oe_observacion, "", new { @class = "text-danger" })
+                    @Html.TextAreaFor(q => q.or_observacion, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.or_observacion, "", new { @class = "text-danger" })
                 </div>
             </div>
 
