--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Nuevo.cshtml
@@ -37,7 +37,7 @@
         <div class="col-md-12">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="co_observacion">Proveedor</label>
+                    <label for="co_observacion">Proveedor*</label>
                     @Html.TextBoxFor(q => q.pe_razonSocial, new { @class = "form-control", @id = "pe_razonSocial", @disabled = "disabled" })
                     @Html.ValidationMessageFor(q => q.pe_razonSocial, "", new { @class = "text-danger" })
                 </div>
