--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/Nuevo.cshtml
@@ -31,6 +31,7 @@
     @Html.HiddenFor(q => q.can_total)
     @Html.HiddenFor(q => q.dm_cantidad)
     @Html.HiddenFor(q => q.IdBodega)
+    @Html.HiddenFor(q => q.IdTransaccionSession)
 
 
 
