--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_por_distribuir.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_por_distribuir.cshtml
@@ -12,7 +12,7 @@
 
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
 
-        settings.SettingsContextMenu.Enabled = true;
+       // settings.SettingsContextMenu.Enabled = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
 
         settings.SettingsPager.Visible = true;
