--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_distribuidos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_distribuidos.cshtml
@@ -13,22 +13,20 @@
 
 
         settings.SettingsEditing.Mode = GridViewEditingMode.Inline;
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "DistribucionPorLote", Action = "EditingUpdate_list_dis", Area = "Inventario" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "DistribucionPorLote", Action = "EditingDelete_list_dis", Area = "Inventario" };
 
         settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowEditButton = true;
         settings.CommandColumn.ShowDeleteButton = true;
 
         settings.SettingsPager.Visible = true;
         settings.SettingsBehavior.AllowSelectByRowClick = false;
 
-        settings.SettingsContextMenu.Enabled = true;
+        // settings.SettingsContextMenu.Enabled = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = false;
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.Off;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
@@ -36,7 +34,18 @@
         //Evento para pintar de rojo las filas anuladas
 
         settings.Columns.Add("pr_descripcion", "Producto").Width = System.Web.UI.WebControls.Unit.Percentage(60);
-        settings.Columns.Add("IdUnidadMedida", "Unidad medida").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdUnidadMedida";
+            column.Caption = "Unidad medida";
+            column.Width = Unit.Percentage(30);
+            column.PropertiesEdit.DisplayFormatString = "d";
+           
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+
         settings.Columns.Add(column =>
         {
             column.FieldName = "dm_cantidad";
